fixed video issues

--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -947,5 +947,10 @@ footer img {
 
 /* Fancy Box Override */
 .fancybox-skin {
-	border-radius: 0 !important;	
+	border-radius: 0 !important;
+	padding: 2px !important;	
+}
+
+.fancybox-inner {
+	background: white !important;
 }
