--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -17,18 +17,44 @@ BlankSlate is distributed under the terms of the GNU GPL
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{font-size:100%;font:inherit;padding:0;border:0;margin:0;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}.clear{clear:both}
 .sticky{}.bypostauthor{}.wp-caption{}.wp-caption-text{}.gallery-caption{}.alignright{}.alignleft{}.aligncenter{}.screen-reader-text{clip:rect(1px, 1px, 1px, 1px);position:absolute !important}
 
+#wrapper {
+	height: 100%;
+}
+
 #header {
 	margin: auto;
 	padding: 40px 80px 40px 80px;
 }
 
-.content {
-	margin: auto;
-	padding: 0 80px 0 80px;
+.header-title {
+	margin: 120px 0 0 0;
+	width: 350px;
+	color: white;
 }
 
-.about,
-#contact1 {
+.header-title p {
+	width: 350px;
+	font-size: 52px;
+	font-weight: 600;
+	line-height: 65px;
+}
+.header-title a:link,
+.header-title a {
+	font-size: 22px;
+	color: white;
+}
+
+.bg-cover {
+	background-image: url("images/bg-cover.png");
+	height: 100%; 
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 50% 30%;
+	margin-bottom: 75px;
+}
+
+.content {
+	margin: auto;
 	padding: 0 80px 0 80px;
 }
 
@@ -69,11 +95,12 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 .menu-block ul {
-	text-align: center;
+	text-align: right;
 	list-style-type: none;
 	font-size: 3.75rem;
 	font-weight: 900;
 	margin-top: 80px;
+	margin-right: 75px;
 }
 .menu-block ul a {
 	color: white;
@@ -83,7 +110,17 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 .menu-block .logo {
 	display:block;
 	position:relative;
+}
+
+.logo-icon,
+.arrow-down-icon,
+.menu-burger-icon {
 	fill: white;
+}
+
+.arrow-up-icon {
+	transform: rotateZ(180deg);
+	fill: black;
 }
 
 .menu-block .menu-cross{
@@ -94,37 +131,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 .menu-block .logo {
 	text-align: left;
 	margin: 40px 0 0 80px;
-}
-
-.splash {
-	height: 500px;
-	max-height: 500px;
-	min-height: 450px;
-	overflow:hidden;
-	background-repeat: no-repeat;
-	background-size: cover;  
-	background-image: url('images/splash.png');
-}
-
-.site-name {
-	margin-top: 140px;
-	margin-right: 175px;
-	text-align: right;
-	font-size: 3.125rem;
-	font-weight: 600;
-	letter-spacing: -1.2px;
-	line-height: 0.8;
-	padding: 0;
-}
-
-.site-text {
-	margin-right: 175px;
-	text-align: right;
-	font-size: 2.1875rem;
-	font-weight: 300;
-	letter-spacing: -1.2px;
-	line-height: 1;
-	padding: 0;
 }
 
 .thick-line {
@@ -145,18 +151,35 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	height: 70px;
 }
 
+#header .fill-black {
+	fill:black;
+	height: auto;
+}
+
+.arrow-container {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
+a.arrow-up,
 a.arrow-down {
 	text-align:center;
 	width: 50px;
 	height: 20px;
 	display: block;
-	margin: 50px auto 185px auto;
+	margin: 50px auto 50px auto;
+}
+
+a.arrow-up {
+	text-align: right;
+	margin: 50px 0 50px auto;
 }
 
 
 h1.projects {
 	margin-bottom: 5.625rem;
-	text-align: center;
+	text-align: left;
 	font-weight: 900;
 	font-size: 2.5rem;
 }
@@ -165,6 +188,19 @@ h1.projects {
 	position: relative;
 	margin-bottom: 30px;
 	min-height: 280px;
+}
+
+.feedback .project-small .quote {
+	padding: 50px;
+	background-color: #f5efef;
+	color: #0c39c6;
+	font-weight: 600;
+	font-size: 20px;
+}
+
+.feedback .project-small .title-right,
+.feedback .project-small .title-left {
+	font-weight: 600;
 }
 
 .project img:hover {
@@ -265,7 +301,7 @@ h1.projects {
 	max-width: 590px;
 }
 .quote .quote-icon {
-	color: #ba3963;
+	color: #0c39c6;
 	font-weight: 600;
 	font-size: 10.625rem;
 	margin-bottom: 0;
@@ -292,76 +328,38 @@ h1.projects {
 	letter-spacing: -1px;
 }
 
-.about {
-	margin: 0 auto 70px auto;
-	padding-top: 160px;
-}
-
-.about .column {
-	max-width: 590px;
-}
-
-.about h2 {
-	font-size: 1.75rem;
-	font-weight: 800;
-	padding-left: 18px;
-}
-
-.about p {
-	font-size: 1.125rem;
-	padding-left: 18px;
-	margin-bottom: 0;
-	font-weight: 300;
-}
-
-aside.contact {
-	float:left;
-	font-size: 0.875rem;
-	font-weight: 300;
-	position: absolute;
-	margin-left: -20px;
-	padding-top: 160px;
-}
-
-aside.contact ul {
-	margin: 0;
-	padding: 0;
-}
-
-aside.contact li {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-aside.contact .header {
-	margin-top: 10px;
+.hello {
+	font-size: 40px;
 	font-weight: 600;
-	color: #ba3963;
 }
 
-div.contact {
+.contact,
+.about {
+	margin-left: 30px;
+}
+
+.contact {
 	font-size: 0.875rem;
 	font-weight: 300;
 	margin-bottom: 60px;
 }
 
-div.contact ul {
+.contact ul {
 	margin: 0;
 	padding: 0;
 	max-width: 590px !important;
 }
 
-div.contact li {
+.contact li {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	font-weight: 300;
 }
 
-div.contact .header {
+.contact .header {
 	margin-top: 10px;
-	color: #ba3963;
+	color: #0c39c6;
 	font-size: 0.875rem;
 	font-weight: 600;
 	text-transform: uppercase;
@@ -405,6 +403,7 @@ video {
 	background-image: url(images/play_button.svg);
 	background-repeat: no-repeat;
 	background-position: center center;
+    background-color: rgba(1, 1, 1, .3);
 	top: 0;
 	left: 0	;
 }
@@ -465,9 +464,9 @@ video {
 	margin: 0 auto 120px;
 	width: 115px;
 	padding: 8px 0 8px 0;
-	border: 3px solid #ba3963;
+	border: 3px solid #0c39c6;
 	text-align: center;
-	color: #ba3963;
+	color: #0c39c6;
 	font-size: 0.875rem;
 	font-weight: 600;
 	text-transform: uppercase;
@@ -481,7 +480,7 @@ video {
 .button-up:hover {
 	opacity: 0.8;
 	color: white;
-	background-color: #ba3963;
+	background-color: #0c39c6;
 }
 
 
@@ -527,7 +526,7 @@ footer .social-icon-top {
 footer .social-icon {
 	width: 48px;
 	height: 48px;
-	color: #ba3963;
+	color: #0c39c6;
 	padding: 0 !important;
 	margin-left: 15px;
 }
@@ -562,7 +561,7 @@ footer p.name {
 	font-weight: 300;
 	padding: 0;
 	margin-bottom: 16px;
-	color: #ba3963;
+	color: #0c39c6;
 	letter-spacing: -1px;
 }
 
@@ -601,14 +600,19 @@ footer img {
 		bottom: 0;
 	}
 
+	.header-title p {
+		font-size: 40px;
+		width: 300px;
+		line-height: 3rem;
+	} 
+	.header-title a {
+		font-size: 24px;
+	}
+
 	.site-name,
 	.site-text,
 	.thick-line {
 		margin-right: 80px;
-	}
-
-	.splash {
-		background-position: 20%;
 	}
 
 	.margin-left {
@@ -632,10 +636,6 @@ footer img {
 		display:block;
 	}
 
-	.quote, .about {
-		width: auto;
-	}
-
 	.hide-for-medium-down {
 		display: none !important;
 	}
@@ -645,29 +645,6 @@ footer img {
 	.project .title-right,
 	.project .title-left {
 		max-width: 200px;
-	}
-
-	.quote .quote-icon {
-		margin-left: -8px;
-		padding-left: 0;
-	}
-
-	.quote .quote-author,
-	.quote .quote-text {
-		padding-left: 0;
-	}
-
-	.about {
-		margin-bottom: 20px;
-	}
-
-	.about h2 {
-		padding-left: 0;
-	}
-
-	.about p {
-		padding-left: 0;
-
 	}
 
 	.button-up {
@@ -684,8 +661,13 @@ footer img {
 
 /* Large only */
 @media screen and (min-width: 64em) and (max-width: 74.9375em) {
-	div.contact ul li {
+	.contact ul li {
 		padding-left: 18px;
+	}
+
+	.feedback .project-small {
+		position: absolute !important;
+		top: -70px;
 	}
 }
 
@@ -703,13 +685,18 @@ footer img {
 		display: none !important;
 	}
 
+	.feedback .project-small {
+		position: absolute !important;
+		top: -200px;
+	}
+
 	.project .title-right-down,
 	.project .title-left-down,
 	.project .title-right,
 	.project .title-left {
 		max-width: 500px;
 	}
-
+	a.arrow-up,
 	a.arrow-down {
 		width: 60px;
 		height: 28px;
@@ -725,8 +712,14 @@ footer img {
 		padding: 20px 20px 20px 20px;
 	}
 
-	.about,
-	#contact1,
+	.header-title p {
+		font-size: 24px;
+		width: 200px;
+		line-height: 2rem;
+	} 
+	.header-title a {
+		font-size: 16px;
+	}
 	.content {
 		padding: 0 20px 0 20px;
 	}
@@ -785,17 +778,14 @@ footer img {
 		width: 75px;
 	}
 
-	.splash {
-		height: 258px;
-		margin-bottom: 100px;
-		background-position: 20%;
-		min-height: 258px;
-		max-height: 300px;
-	}
-
 	.project a, .project a:hover, .project a:active {
 		font-size: 0.875rem;
 		letter-spacing: -0.8px;
+	}
+
+	.feedback .project-small .quote {
+		font-size: .875rem;	
+		padding: 20px;
 	}
 
 	.quote {
@@ -817,23 +807,6 @@ footer img {
 
 	.quote .quote-author {
 		padding-left: 0;
-	}
-
-	.about {
-		padding-top: 80px;
-	}
-
-	.about h2 {
-		font-size: 1.25rem;
-		font-weight: 700;
-		padding-left: 0;
-	}
-
-	.about p {
-		font-size: 1.125rem;
-		padding-left: 0;
-		margin-bottom: 0;
-		font-weight: 300;
 	}
 
 	.line {
@@ -942,10 +915,6 @@ footer img {
 
 	.single .info {
 		margin-bottom: 12px;
-	}
-
-	.about .column {
-		max-width: auto;
 	}
 }
 
